# Anti-Churn-Committee

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/99_final/: final_preprocessed_v1.ipynb  final_preprocessed_v2.ipynb
notebooks/gwanhoo/: 00_preprocessed.ipynb  01_EDA.ipynb  02_EDA.ipynb  haybit_visualization_v3.ipynb  project.ipynb
notebooks/hyerim/: d30 미잔존 유저는 언제 이탈하는지.ipynb  eda.ipynb  test.ipynb  기능별 사용현황.ipynb  알림 eda.ipynb  전처리.ipynb  전처리2.ipynb  챌린지 알림 오픈 후 24시간 탐색률이 낮은 이유.ipynb  추가검증.ipynb  타겟세그먼트 찾아 삼만리.ipynb
notebooks/jeongsu/: 00preprocess.ipynb  01eda.ipynb  preprocess.ipynb  전처리j.ipynb
notebooks/jeongsu/분석/: eda01.ipynb  tableau_용.ipynb
notebooks/jiryun/: 2eda.ipynb  README.md  analysis.ipynb  preprocessed.ipynb  통계.ipynb
notebooks/juseong/: A.ipynb  Cohort Analysis_v1.ipynb  Cohort Analysis_v2.ipynb  Cohort Analysis_v3.ipynb  README.md  Statistical_Test.ipynb  eda.ipynb  eda_v2.ipynb  eda_v3.ipynb  eda_v4.ipynb  test.ipynb  전처리y.ipynb
